--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <meta charest="utf-8"/>
+        <link rel="stylesheet" href="./style.css" />
     </head>
     <body>
         Dr. Eleanor Gaye
